<resources>
    <string name="app_name">크래프토리</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="bottom_like">좋아요</string>
    <string name="bottom_collect">댓글</string>
    <string name="bottom_source">신고</string>
    <string name="banner_ad_unit_id">ca-app-pub-8115892791740395/2663418269</string>
    <string name="editor_youtube_url_input_hint">URL 붙이기</string>

    <string name="artwork_type">작품형태</string>

    <string name="patron_detail_default_text">설명이 아직 작성되지 않았습니다.</string>
    <string name="patron_manage_subtitle">후원관리</string>
    <string name="patron_detail_info_edit_button_text">설명작성</string>
    <string name="patron_stop_button_text">후원종료</string>
    <string name="patron_result_summit_button_text">결과제출</string>
    <string name="patron_withdraw_button_text">후원받기</string>
    <string name="patron_cancel_button_text">후원취소</string>

    <string name="patron_stop_dialog_title">후원종료</string>
    <string name="patron_stop_dialog_content">후원을 종료하면 더 이상 후원을 받을 수 없습니다. 후원을 종료하시겠습니까?</string>
    <string name="phone_purchase">휴대폰 결제</string>


    <string name="description_cheer_blackbackground">검은배경</string>
    <string name="description_cheer_blackbackgrounddanger">붉은검은배경</string>
    <string name="event_posting_button_text">이벤트 올리기</string>
    <string name="notice_posting_text">공지사항 쓰기</string>
    <string name="box_send_button_text">BOX 보내기</string>
    <string name="selected_profile_name_text">선택되지 않았습니다</string>
    <string name="message_zero_box">0 BOX</string>
    <string name="send_box_amount_text">보낼 BOX 입력</string>
    <string name="send_text_hint_text">보상 내용 입력</string>
    <string name="save_button_text">보내기</string>
    <string name="user_query_input_hint">검색할 닉네임 입력</string>
    <string name="search_button_text">찾기</string>
    <string name="message_cheer_point">포인트를 후원하고 응원 메시지를 보내세요</string>
    <string name="message_current_point">보유 포인트 :</string>
    <string name="title_activity_tag_main">TagMainActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
