<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cloud.scalabl.httpspg_app_q0nz5d8azjwlxxrweewghhzuexr7rc.anicast.BoxManagerActivity">


    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.beardedhen.androidbootstrap.BootstrapWell
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/selected_profile_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/icon_profile_default" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/selected_profile_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/selected_profile_name_text" />

                        <TextView
                            android:id="@+id/selected_user_point"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/message_zero_box" />

                    </LinearLayout>


                </LinearLayout>
            </com.beardedhen.androidbootstrap.BootstrapWell>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/send_box_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/send_box_amount_text"
                android:inputType="number"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/send_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/send_text_hint_text"
                android:inputType="text"
                android:textSize="12sp" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:text="@string/save_button_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_query_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/user_query_input_hint"
                android:inputType="textPersonName"
                android:textSize="12sp" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_button_text"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/input_layout"
        android:padding="10dp">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
