<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_card_contents"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">


    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/tap_navigation">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_speak_default"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/current_page"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:text=" / "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textColor="#ffffff" />

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total_page"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:id="@+id/tap_navigation"
        android:background="#222222"
        android:layout_height="35dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/like_button">

            <ImageView
                android:id="@+id/like_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_action_like" />

            <TextView
                android:id="@+id/like_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_like"
                android:textColor="#ffffff"
                android:textSize="@dimen/small_size_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="@dimen/small_size_text"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#33ffffff"/>

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/comment_button">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/imageView2"
                android:layout_marginRight="5dp"
                android:src="@android:drawable/stat_notify_chat" />

            <TextView
                android:text="@string/bottom_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textColor="#ffffff"
                android:textSize="@dimen/small_size_text"
                android:textStyle="bold"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/comment_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="@dimen/small_size_text"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#33ffffff"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/report_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/report_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_action_report" />

            <TextView
                android:id="@+id/report_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_source"
                android:textColor="#ffffff"
                android:textSize="@dimen/small_size_text"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
