<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cloud.scalabl.httpspg_app_q0nz5d8azjwlxxrweewghhzuexr7rc.anicast.CheerActivity">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_nav_height"
        android:orientation="vertical">

        <include
            layout="@layout/top_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preview_layout"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView85"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/message_cheer_point" />

            <com.beardedhen.androidbootstrap.BootstrapWell
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView89"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message_current_point"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/current_point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message_zero_box"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.beardedhen.androidbootstrap.BootstrapWell>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/point_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_radius_5dp_white_bordercolored"
                    android:ems="10"
                    android:hint="응원할 포인트를 입력하세요"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/comment_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_radius_5dp_white_bordercolored"
                    android:ems="10"
                    android:hint="메시지를 입력하세요"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/preview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp">

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/ic_action_circle_profile" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(name)"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/preview_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="응원 메시지를 입력하세요"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cheer_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="+ 0 BOX"
                    android:textColor="@color/cheer_point_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/input_layout"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:bootstrapText="응원하기" />
</RelativeLayout>
